@@ -10,9 +10,7 @@
 
 		* possibly reddit isn't shut down on wallet close. (use cosigner plugin to turn on request debug, close chaintipper wallet and observe there are still requests)
 		* looks like uppercase U/chaintip doesn't work
-		* tip amount text not shown?
 		* tip amount text newlines screw up gui (reported by remora around 10.9.2021)
-		* "ChainTip" column -> "Stealth" column
 
 	* beta n+2
 
