@@ -148,9 +148,10 @@ class TipListItem(QTreeWidgetItem, PrintError):
 			#tip.getID(),
 			format_time(tip.chaintip_message_created_utc), 
 			tip.acceptance_status,
+			#tip.chaintip_confirmation_status if hasattr(tip, "chaintip_confirmation_status") else "",
+			tip.chaintip_confirmation_status if (hasattr(tip, "chaintip_confirmation_status") and tip.chaintip_confirmation_status == "<stealth>") else "",
 			tip.payment_status,
 			"{0:.8f}".format(tip.amount_received_bch) if isinstance(tip.amount_received_bch, Decimal) else "",
-			tip.chaintip_confirmation_status if hasattr(tip, "chaintip_confirmation_status") else "",
 			#tip.chaintip_message_author_name,
 			#tip.chaintip_message_subject,
 			tip.subreddit_str if hasattr(tip, "subreddit_str") else "",
@@ -204,9 +205,9 @@ class TipListWidget(PrintError, MyTreeWidget, TipListener):
 			#_('getID()'), 
 			_('Date'),
 			_('Acceptance'),
+			_('Stealth'),
 			_('Payment'),
 			_('Received (BCH)'),
-			_('ChainTip'),
 			#_('Author'), 
 			#_('Subject'), 
 			_('Subreddit'), 
