@@ -5,6 +5,7 @@
   * better info when autopay fails on wallets with pw
   * simplify tiplist (remove unneeded columns)
   * "tip amount text" fixed for <currency_symbol><decimal> (was empty)
+  * "ChainTip" column -> "Stealth" column (only showing "<stealth>" or "")
  
 +++
 
